v 1.3.4
=======
[2015-10-20]
- Merged CB64 and CB64COW

v 1.3.3
=======
[2015-10-11]
- Fixed 64COW iterators returning empty Entry for queries that shouldn't return anything. 
- Added CHANGELOG
- Pushed to v1.3.3-SNAPSHOT